--- a/Resume/style.css
+++ b/Resume/style.css
@@ -13,7 +13,7 @@ body{
     background: #f5f5f5;
     max-width: 800px;
     margin: 60px auto;
-    height: 1250px;
+    height: 2000px;
     padding: 20px;
     box-shadow: 0 2px 20px rgba(0,0,0,0.3);
 }
@@ -64,7 +64,7 @@ body{
 }
 
 h2{
-    background: #006bc4;
+    background: #00b6cf;
     padding: 15px;
     color: #fff;
     margin: 30px 0;
@@ -91,5 +91,5 @@ h2{
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    
+
 }
