--- a/Resume/style.css
+++ b/Resume/style.css
@@ -90,6 +90,29 @@ h2{
     line-height: 2;
 }
 
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+
+.fa-linkedin {
+    background: #00b6cf;
+    color: white;
+  }
+
+.fa-github {
+    background: #00b6cf;
+    color: white;
+  }
+
+.fa:hover {
+    opacity: 0.7;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 
 }
